Changing Landingpage folder to Main

--- a/client/src/components/Main/Search.css
+++ b/client/src/components/Main/Search.css
@@ -1,4 +1,5 @@
 input.mr-sm-2.form-control.form-control-lg {
   /* width: 93.7%; */
-  width: 92.7%;
+  /* width: 92.7%; */
+  width: calc(100% - 85px);
 }
