--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -8,11 +8,11 @@
   margin-left: 45%;
 } */
 
-.mr-auto, .mx-auto {
+/* .mr-auto, .mx-auto {
   margin-right: 0 !important;
 }
 
 #basic-navbar-nav {
   justify-content: flex-end;
-}
+} */
 
